--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "radio",
         "player",
         "stream",
-        "homepod"
+        "homepod",
+        "airtunes",
+        "airtunes2"
     ],
     "author": "Daniel Man",
     "license": "MIT",
@@ -23,7 +25,7 @@
     "dependencies": {
         "lame": "^1.2.4",
         "request": "^2.83.0",
-        "airtunes2": "^1.0.0"
+        "airtunes2": "^1.1.0"
     },
     "repository": {
         "type": "git",
